@@ -2,102 +2,90 @@
 - !ruby/object:RdfHelper::TestCase 
   about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-00.ttl
   description: "prefix name must end in a :"
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-00.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-00.ttl
   name: bad-00
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
   about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-01.ttl
   description: blank predicate forbidden
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-01.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-01.ttl
   name: bad-01
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
   about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-02.ttl
   description: blank predicate forbidden
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-02.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-02.ttl
   name: bad-02
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
   about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-03.ttl
   description: a forbidden as subject
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-03.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-03.ttl
   name: bad-03
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
   about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-04.ttl
   description: ", not allowed in collections"
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-04.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-04.ttl
   name: bad-04
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
   about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-05.ttl
   description: "{} not allowed in Turtle"
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-05.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-05.ttl
   name: bad-05
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
   about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-06.ttl
   description: is and of not allowed in Turtle
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-06.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-06.ttl
   name: bad-06
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
   about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-07.ttl
   description: paths not allowed in Turtle
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-07.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-07.ttl
   name: bad-07
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
-  about: !ruby/object:RdfContext::URIRef 
-    namespace: 
-    normalize: false
-    to_s: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-08.ttl
-    uri: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-08.ttl
+  about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-08.ttl
   description: "@keywords not allowed in Turtle"
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-08.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-08.ttl
   name: bad-08
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
-  about: !ruby/object:RdfContext::URIRef 
-    namespace: 
-    normalize: false
-    to_s: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-09.ttl
-    uri:  http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-09.ttl
+  about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-09.ttl
   description: => not allowed in Turtle
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-09.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-09.ttl
   name: bad-09
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
-  about: !ruby/object:RdfContext::URIRef 
-    namespace: 
-    normalize: false
-    to_s: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-10.ttl
-    uri: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-10.ttl
+  about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-10.ttl
   description: = not allowed in Turtle
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-10.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-10.ttl
   name: bad-10
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
   about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-11.ttl
   description: "@forAll not allowed in Turtle"
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-11.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-11.ttl
   name: bad-11
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
   about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-12.ttl
   description: "@forSome not allowed in Turtle"
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-12.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-12.ttl
   name: bad-12
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
   about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-13.ttl
   description: <= not allowed in Turtle
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-13.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-13.ttl
   name: bad-13
   outputDocument: 
 - !ruby/object:RdfHelper::TestCase 
   about: http://www.w3.org/2001/sw/DataAccess/df1/tests/bad-14.ttl
   description: long literal with missing end
-  inputDocument: /Users/gregg/Projects/rdf_context/spec/turtle/bad-14.ttl
+  inputDocument: /Users/gregg/Projects/rdf-n3/spec/turtle/bad-14.ttl
   name: bad-14
   outputDocument: 
