@@ -1,4 +1,5 @@
 === 0.3.0.pre
+* New Predictive-Parser based N3 Reader, substantially faster than previous Treetop-based parser
 * RDF.rb 0.3.0 compatibility updates
   * Remove literal_normalization and qname_hacks, add back uri_hacks (until 0.3.0)
   * Use nil for default namespace
